updated index file
in this commit i added content in the index file

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE >
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,9 +8,9 @@
 
 </head>
 <body>
-    <h1><u>AI Good or Bad for workflow </u></h1>
+    <h1><u>AI Good or Bad for workflow.</u></h1>
 
-<img src="images/image_2.jpg" width="500" height="">
+<img src="images/image_2.jpg" width="500" >
 
 
 <div>
@@ -29,7 +29,7 @@
 
   
 
-    Arguments suggesting AI and automation will create more jobs:
+   <h2> Arguments suggesting AI and automation will create more jobs: </h2>
 
     <ol>
     <li> New Job Opportunities: AI technology creates new job opportunities in fields like machine learning, data analysis, AI ethics, and software development. These fields require skilled professionals to design, develop, and maintain AI systems.</li>
@@ -52,6 +52,47 @@
 
 <img src="images/image_5.jpg">
 
+
+
+<div>
+
+ <h2> Suggesting AI and automation will eliminate more jobs: </h2> 
+ 
+ <p>
+
+  <ol>
+
+  
+
+ <li>Job Displacement: Automation can replace human workers in tasks that are routine, repetitive, and predictable. Jobs in manufacturing, transportation, and customer service are at risk of being automated, leading to significant job displacement.</li>
+
+  
+
+    <li> Skill Gap: AI-related jobs often require advanced technical skills. The existing workforce may not be adequately equipped with the necessary skills, leading to a potential mismatch between the skills required and those possessed by the workforce.</li>
+
+  
+
+        <li>Income Inequality: The benefits of AI and automation may not be distributed evenly. Wealthy individuals and large corporations may reap the most benefits, leading to increased income inequality, which can have social and economic implications.</li>
+
+  
+
+            <li>Job Polarization: Automation can lead to job polarization, where highly skilled, high-paying jobs and low-skilled, low-paying jobs are preserved, but mid-skilled jobs are eliminated, leading to a divided job market.</li>
+
+  
+
+                <li> Economic Disruptions: Rapid adoption of AI and automation can cause economic disruptions, especially in regions heavily dependent on industries vulnerable to automation. This can lead to localized job losses and economic challenges.</li>
+
+  </ol>
+  <img class="image3" src="images/image_7.jpeg" width="600"  >
+
+   In summary, the impact of AI and automation on employment is complex and multifaceted. While AI can create new job opportunities and enhance productivity, it also poses challenges related to job displacement, skill gaps, and economic disparities. Public policies, education and training programs, and proactive workforce planning are crucial in addressing the potential negative impacts and maximizing the benefits of AI and automation.
+
+</p>
+
+
+
+
+</div>
 
 
 
